--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,152 @@
-numpy==1.24.1
-opencv-python==4.7.0.68
-tk==0.1.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.2
+asttokens==2.0.5
+attrs==19.3.0
+Automat==0.8.0
+aws-lambda-builders==1.18.0
+aws-sam-cli==1.53.0
+aws-sam-translator==1.46.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+binaryornot==0.4.4
+bleach==5.0.1
+blinker==1.4
+boto3==1.24.48
+botocore==1.27.48
+certifi==2019.11.28
+cffi==1.15.1
+chardet==3.0.4
+chevron==0.14.0
+click==7.1.2
+cloud-init==22.4.2
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cookiecutter==2.1.1
+cryptography==2.8
+cupshelpers==1.0
+dateparser==1.1.1
+dbus-python==1.2.16
+debugpy==1.6.2
+decorator==5.1.1
+defer==1.0.6
+defusedxml==0.7.1
+distro==1.4.0
+distro-info===0.23ubuntu1
+docker==4.2.2
+entrypoints==0.3
+executing==0.9.1
+fastjsonschema==2.16.1
+Flask==1.1.4
+httpie==1.0.3
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+ipykernel==6.15.1
+ipython==8.4.0
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.18.1
+Jinja2==2.10.1
+jinja2-time==0.2.0
+jmespath==0.10.0
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+jupyter-client==7.3.4
+jupyter-core==4.11.1
+jupyterlab-pygments==0.2.2
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+macaroonbakery==1.3.1
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+more-itertools==4.2.0
+nbclient==0.6.6
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+netifaces==0.10.4
+notebook==6.4.12
+oauthlib==3.1.0
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==9.3.0
+prometheus-client==0.14.1
+prompt-toolkit==3.0.30
+protobuf==3.6.1
+psutil==5.9.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.16.2
+pycparser==2.21
+pycups==1.9.73
+Pygments==2.12.0
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==3.0.9
+pyRFC3339==1.1
+pyrsistent==0.15.5
+pyserial==3.4
+pytesseract==0.3.10
+python-apt==2.0.1
+python-dateutil==2.8.2
+python-debian===0.1.36ubuntu1
+python-slugify==6.1.2
+pytz==2022.1
+PyYAML==5.3.1
+pyzmq==23.2.0
+regex==2021.9.30
+requests==2.25.1
+requests-unixsocket==0.2.0
+s3transfer==0.6.0
+SecretStorage==2.3.1
+Send2Trash==1.8.0
+serverlessrepo==0.1.10
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sos==4.4
+soupsieve==2.3.2.post1
+ssh-import-id==5.10
+stack-data==0.3.0
+systemd-python==234
+terminado==0.15.0
+text-unidecode==1.3
+tinycss2==1.1.1
+tomlkit==0.7.2
+tornado==6.2
+traitlets==5.3.0
+Twisted==18.9.0
+typing-extensions==3.10.0.0
+tzlocal==3.0
+ubuntu-advantage-tools==8001
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+wadllib==1.3.3
+watchdog==2.1.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.3.3
+Werkzeug==1.0.1
+zipp==1.0.0
+zope.interface==4.7.1
